<resources>
    <string name="app_name">ConfConnect</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Create New Account</string>
    <string name="click_to_advance">Click to advance</string>
    <string name="confconnect">ConfConnect</string>
    <string name="welcome_to">Welcome to</string>
    <string name="name">Name</string>
    <string name="already_registered">Already Registered?</string>
    <string name="Log_in_here"><u>Log in here.</u></string>
    <string name="is_Sign_in">Don’t have an account?</string>
    <string name="Sign_in_here"><u>Sign in here.</u></string>
    <string name="articles">Articles</string>
    <string name="profile">Profile</string>
    <string name="upcoming_events">Upcoming Events</string>
    <string name="log_out">Log out</string>
    <string name="profile_background">Profile Background</string>
    <string name="article_tittle">Article Tittle</string>
    <string name="author">Author</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="room">Room</string>
    <string name="article_description">Article Description</string>
    <string name="description">Description</string>
    <string name="adddate">Date</string>
    <string name="add_article">Add Article</string>
    <string name="todo">TODO</string>
    <string name="title">Title</string>
    <string name="manage_articles">Manage Articles</string>
    <string name="manage_profiles">Manage Profiles</string>
    <string name="manage_schedule">Manage Schedule</string>
    <string name="admin_page">Admin Page</string>
    <string name="manage_questions">Manage Questions</string>
    <string name="change_location">Change Location</string>
    <string name="settings_button">Settings Button</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>