<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp"
    app:cardElevation="5dp"
    android:layout_margin="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:background="@android:color/white">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.66" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/article_tittle"
            android:textSize="26sp"
            android:textStyle="bold"
            android:textColor="@color/lightgray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/guideline_right"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tvRoom"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintVertical_bias="0.3"
            android:gravity="center" />

        <TextView
            android:id="@+id/tvRoom"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/room"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:textStyle="italic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/guideline_right"
            app:layout_constraintTop_toBottomOf="@id/tvTitle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintVertical_bias="0.6"
            android:gravity="center" />

        <View
            android:id="@+id/vertical_line"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:background="@android:color/black"
            app:layout_constraintStart_toStartOf="@id/guideline_right"
            app:layout_constraintEnd_toEndOf="@id/guideline_right"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="102dp"
            android:layout_height="23dp"
            android:gravity="center"
            android:text="@string/date"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="15sp"
            android:paddingLeft="20dp"
            app:layout_constraintBottom_toTopOf="@id/tvTime"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@id/guideline_right"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />

        <TextView
            android:id="@+id/tvTime"
            android:layout_width="102dp"
            android:layout_height="23dp"
            android:gravity="center"
            android:text="@string/time"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:paddingLeft="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@id/guideline_right"
            app:layout_constraintTop_toBottomOf="@id/tvDate"
            app:layout_constraintVertical_bias="0.5" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="10dp"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:id="@+id/leftBar">
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
